--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@ This platform is tailored to the university community, providing a secure and pr
 
       <div id="footer">
         <p>&#169;Mujomegle 2023</p>
-        <a href="mailto://contact@Mujomegle.live">Contact us</a>
+        <a href="mailto://contact@mujomegle.com">Contact us</a>
       </div>
     </div>
     <div id="disclaimer">
