Added login & signup

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
           <p><span>0</span>+ online now</p>
         </div>
         <button id="feedback-btn" class="button">Provide Feedback</button>
+        <button id="login-btn" class="button">Login</button>
       </div>
     </div>
 
