--- a/public/video.html
+++ b/public/video.html
@@ -42,7 +42,7 @@
       const token = localStorage.getItem("isLoggedIn")
       console.log(token)
       if(!token) {
-        window.location.href = "/login"
+        window.location.href = "/home"
         window.location.reload
       }
     </script>
