--- a/public/chat.html
+++ b/public/chat.html
@@ -24,7 +24,7 @@
     const token = localStorage.getItem("isLoggedIn")
     console.log(token)
     if(!token) {
-      window.location.href = "/login"
+      window.location.href = "/home"
       window.location.reload
     }
   </script>
