--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
   <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="favicon/msapplication-TileColor" content="#da532c">
   <meta name="favicon/theme-color" content="#333333">
+  <script>
+    const token = localStorage.getItem("isLoggedIn")
+    if(!token) {
+      window.location.href = "/home"
+      window.location.reload
+    }
+  </script>
 </head>
 
 <body>
@@ -32,7 +39,7 @@
         <div id="peopleOnline">
           <p><span>0</span>+ online now</p>
         </div>
-        <button id="feedback-btn" class="button">Provide Feedback</button>
+        <!-- <button id="feedback-btn" class="button">Provide Feedback</button> -->
         <button id="login-btn" class="button">Login</button>
       </div>
     </div>
