--- a/public/home.html
+++ b/public/home.html
@@ -29,7 +29,7 @@
       }
       .logo {
         width: auto;
-        height: 58px;
+        height: 78px;
         background-color: white;
         padding: 5px;
         border-radius: 10px;
@@ -91,7 +91,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: rgba(255, 255, 255, 0.517);
+        background-color: rgba(255, 255, 255, 0.13);
         position: absolute;
         transform: translate(-50%, -50%);
         top: 50%;
@@ -174,6 +174,9 @@
         width: 100%;
         margin-top: 10px;
       }
+      h3{
+        color: white;
+      }
      
       @media (max-width: 768px) {
         .background {
@@ -181,14 +184,14 @@
           height: 420px;
         }
 
-        form {
+        .home {
           height: 500px;
           width: 90%;
           padding: 30px 20px;
         }
 
         .logo {
-          height: 48px;
+          height: 98px;
         }
       }
 
@@ -217,9 +220,9 @@
       <div class="shape"></div>
     </div>
     <div class="home">
-      <img src="./assets/logo.svg" />
+      <img class="logo" src="./assets/logo.svg" />
       <div class="gap"></div>
-      <h3 class="h3">Welcome to MujOmegle</h3>
+      <h3 >Welcome to MujOmegle</h3>
       <p>
         A space for college students to engage in random video chats, build
         connections, and explore campus life from different perspectives.
