--- a/public/signup.html
+++ b/public/signup.html
@@ -32,14 +32,13 @@
       } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-database.js";
 
       const firebaseConfig = {
-        apiKey: "AIzaSyCQuNosd5ochSNYHwmp9PBEj8yXbeqbyxk",
-        authDomain: "test-16408.firebaseapp.com",
-        databaseURL: "https://test-16408-default-rtdb.firebaseio.com",
-        projectId: "test-16408",
-        storageBucket: "test-16408.appspot.com",
-        messagingSenderId: "279255768738",
-        appId: "1:279255768738:web:9faed4399a43aaf1fe81fb",
-        measurementId: "G-6MCJZYJ3XD",
+        apiKey: "AIzaSyBDoy-_cthfXgckx4PnebFALJrvWQSbbIg",
+        authDomain: "mujomegle-muj.firebaseapp.com",
+        projectId: "mujomegle-muj",
+        storageBucket: "mujomegle-muj.appspot.com",
+        messagingSenderId: "345984325269",
+        appId: "1:345984325269:web:6aac058555dc4541882d9c",
+        measurementId: "G-HC2CE4CPYD",
       };
 
       const app = initializeApp(firebaseConfig);
@@ -236,7 +235,7 @@
         animation: rotationBack 1s linear infinite;
         transform-origin: center center;
       }
-      .link{
+      .link {
         text-align: center;
         width: 100%;
         margin-top: 10px;
@@ -258,7 +257,6 @@
           height: 48px;
         }
       }
-
 
       @keyframes rotation {
         0% {
@@ -303,10 +301,9 @@
       </div>
 
       <button type="submit">Register</button>
-      <div class="link"> 
-
+      <div class="link">
         <a href="/login"> Already registered? Login </a>
-    </div>
+      </div>
     </form>
   </body>
 </html>
